# rampc-quadrotor

./: .gitignore  Crazyflie Presentation.odp  README.md  pps_install.sh
DeePC_data/: yawRate_exc_signal.csv
DeePC_data/output/: m_u_data.csv  m_y_data.csv
Deepc_data/: pitchRate_exc_signal.csv  rollRate_exc_signal.csv  u_data.csv  y_data.csv  yawRate_exc_signal.csv
Deepc_data/PRBS 127 No Yaw/: pitchRate_exc_signal.csv  rollRate_exc_signal.csv  thrust_exc_signal.csv
crazyflie-firmware/: README.md  firmware_modifications.patch
crazyflie_ws/: .rosinstall
install/: dfall_install.sh  pps_install.sh
pps install/: pps_install.sh
pps_wiki/: faq.md  installation.md  pps_toc.md  ros_structure.md  setup.md  workflow_for_students.md
pps_ws/src/d_fall_pps/: CMakeLists.txt  package.xml
pps_ws/src/d_fall_pps/GUI_Qt/CrazyFlyGUI/: CMakeLists.txt  CrazyFlyGUI.pro  CrazyFlyGUI.pro.user.7257614  CrazyFlyGUI.qrc
pps_ws/src/d_fall_pps/GUI_Qt/CrazyFlyGUI/include/: CFLinker.h  addressLUT.h  centerMarker.h  channelLUT.h  cornergrabber.h  crazyFly.h  crazyFlyZone.h  crazyFlyZoneTab.h  globalDefinitions.h  mainguiwindow.h  marker.h  myGraphicsRectItem.h  myGraphicsScene.h  myGraphicsView.h  rosNodeThread.h  rosNodeThread_for_managerGUI.h  tablePiece.h
pps_ws/src/d_fall_pps/GUI_Qt/CrazyFlyGUI/src/: CFLinker.cpp  addressLUT.cpp  centerMarker.cpp  channelLUT.cpp  cornergrabber.cpp  crazyFly.cpp  crazyFlyZone.cpp  crazyFlyZoneTab.cpp  main.cpp  mainguiwindow.cpp  mainguiwindow.ui  marker.cpp  myGraphicsRectItem.cpp  myGraphicsScene.cpp  myGraphicsView.cpp  rosNodeThread.cpp  rosNodeThread_for_managerGUI.cpp  tablePiece.cpp
pps_ws/src/d_fall_pps/GUI_Qt/coordinatorGUI/include/: MainWindow.h  rosNodeThread.h
pps_ws/src/d_fall_pps/GUI_Qt/coordinatorGUI/src/: rosNodeThread.cpp
pps_ws/src/d_fall_pps/GUI_Qt/flyingAgentGUI/: flyingAgentGUI.pro  flyingagentgui.qrc
pps_ws/src/d_fall_pps/GUI_Qt/flyingAgentGUI/forms/: connectstartstopbar.ui  controllertabs.ui  coordinator.ui  coordinatorrow.ui  defaultcontrollertab.ui  enablecontrollerloadyamlbar.ui  mainwindow.ui  pickercontrollertab.ui  safecontrollertab.ui  studentcontrollertab.ui  topbanner.ui  tuningcontrollertab.ui
pps_ws/src/d_fall_pps/GUI_Qt/flyingAgentGUI/include/: Constants_for_Qt_compile.h  connectstartstopbar.h  controllertabs.h  coordinator.h  coordinatorrow.h  defaultcontrollertab.h  enablecontrollerloadyamlbar.h  mainwindow.h  pickercontrollertab.h  rosNodeThread.h  studentcontrollertab.h  topbanner.h  tuningcontrollertab.h
pps_ws/src/d_fall_pps/GUI_Qt/flyingAgentGUI/src/: connectstartstopbar.cpp  controllertabs.cpp  coordinator.cpp  coordinatorrow.cpp  defaultcontrollertab.cpp  enablecontrollerloadyamlbar.cpp  main.cpp  mainwindow.cpp  pickercontrollertab.cpp  rosNodeThread.cpp  rosNodeThread_for_flyingAgentGUI.cpp  studentcontrollertab.cpp  topbanner.cpp  tuningcontrollertab.cpp
pps_ws/src/d_fall_pps/GUI_Qt/studentGUI/: studentGUI.pro  studentGUI.pro.user.7257614  studentgui.qrc
pps_ws/src/d_fall_pps/GUI_Qt/studentGUI/include/: MainWindow.h  rosNodeThread.h  rosNodeThread_for_studentGUI.h
pps_ws/src/d_fall_pps/GUI_Qt/studentGUI/src/: MainWindow.cpp  MainWindow.ui  main.cpp  rosNodeThread.cpp
pps_ws/src/d_fall_pps/Student_GUI/studentGUI/: MainWindow.ui  studentGUI.pro
pps_ws/src/d_fall_pps/crazyradio/: CrazyRadio.py  CrazyRadioTest.py  TestCF.py
pps_ws/src/d_fall_pps/crazyradio/cfclient/utils/: logconfigreader.py
pps_ws/src/d_fall_pps/crazyradio/cflib/crazyflie/: __init__.py  commander.py
pps_ws/src/d_fall_pps/include/: CentralManagerService.h  CrazyflieIO.h  DemoControllerService.h  PPSClient.h  ParameterService.h
pps_ws/src/d_fall_pps/include/classes/: GetParamtersAndNamespaces.h
pps_ws/src/d_fall_pps/include/nodes/: BatteryMonitor.h  CentralManagerService.h  Constants.h  DefaultControllerService.h  DemoControllerService.h  PPSClient.h  ParameterService.h  ParameterServiceDefinitions.h  PickerControllerConstants.h  PickerControllerService.h  RemoteControllerService.h  SafeControllerService.h  StudentControllerService.h  TuningControllerService.h
pps_ws/src/d_fall_pps/launch/: Agent.launch  Config.sh  Coordinator.launch  Crazyflie.launch  FollowN_1.launch  Student.launch  StudentCircle.launch  StudentFollow.launch  Teacher.launch  ppsLaunch.launch  studentParams.yaml
pps_ws/src/d_fall_pps/msg/: AngleCommand.msg  AngleControl.msg  AreaBounds.msg  ControlCommand.msg  ControlParameters.msg  ControllerOutput.msg  CrazyflieContext.msg  CrazyflieData.msg  CustomControllerYAML.msg  FloatWithHeader.msg  IntWithHeader.msg  MotorCommand.msg  RateCommand.msg  SetpointWithHeader.msg  StringWithHeader.msg  UnlabeledMarkersArray.msg  ViconData.msg
pps_ws/src/d_fall_pps/param/: BatteryMonitor.yaml  ClientConfig.yaml  Crazyflie.db  CustomController.yaml  DefaultController.yaml  DemoController.yaml  MpcController.yaml  PickerController.yaml  SafeController.yaml  StudentController.yaml  TuningController.yaml  YamlFileNames.yaml
pps_ws/src/d_fall_pps/scripts/: disable_crazyflie  enable_crazyflie  load_custom_controller  load_safe_controller  motors_off_crazyflie  safe_controller_setpoint  safe_controller_setpoint.sh  take_off_crazyflie
pps_ws/src/d_fall_pps/src/: CentralManagerService.cpp  CircleControllerService.cpp  CrazyflieIO.cpp  CustomControllerService.cpp  DemoControllerService.cpp  FollowCrazyflieService.cpp  FollowN_1Service.cpp  PPSClient.cpp  ParameterService.cpp  SafeControllerService.cpp  ViconDataNode.cpp  ViconDataPublisher.cpp
pps_ws/src/d_fall_pps/src/nodes/: BatteryMonitor.cpp  CentralManagerService.cpp  DefaultControllerService.cpp  DemoControllerService.cpp  MpcControllerService.cpp  PPSClient.cpp  ParameterService.cpp  PickerControllerService.cpp  SafeControllerService.cpp  StudentControllerService.cpp  TuningControllerService.cpp
pps_ws/src/d_fall_pps/srv/: AngleController.srv  CMQuery.srv  CentralManager.srv  Controller.srv  LoadYamlFiles.srv  MotorController.srv  RateController.srv
wiki/: faq.md  installation.md  namespace_conventions.md  setup.md  workflow_for_students.md
(+382 files in other folders)
